# iscc-flake

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
iscc_flake/: main.py
tests/: test_iscc_flake.py
